<resources>
    <string name="app_name">TourGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="basic_info">Basic information</string>
    <string name="sights">Sights</string>
    <string name="nature_and_culture">Nature &amp; Culture</string>
    <string name="shop">Shop</string>
    <string name="food">Food</string>
    <string name="communicate">Communicate</string>
    <string name="basic_korean">Basic Korean</string>
    <string name="detail">Detail</string>
    <string name="seoul_travel">Seoul Travel</string>
    <string name="attraction_image_des">Attraction Image</string>
    <string name="image_des">Image</string>
    <string name="image_id">image ID</string>
    <string name="name">name</string>
    <string name="short_description">short description</string>
    <string name="description">description</string>
    <string name="address">address</string>
    <string name="transport">transport</string>
    <string name="phone">phone</string>
    <string name="web">web</string>
    <string name="hours">hours</string>
    <string name="fee">fee</string>
    <string name="category">category</string>
    <string name="seoul">Seoul</string>
    <string name="seoul_des">Seoul is the capital and largest city of South Korea, and it has a
        population of around 10 million, which is one-fifth of the total population. Seoul is the
        center of politics, economy, business, education, and culture for South Korea.\n\nSeoul is a
        city where the traditional and modern coexist. Five Grand Palaces including Deoksugung,
        a UNESCO heritage site, and Bukchon Hanok Village represent a fascinating blend of ancient
        traditions. The Dongdaemun Design Plaza and Lotte World Tower are the extraordinary landmarks
        that reflect modern Seoul.\n\nThe Han River flows into the center of the city, and beautifully
        landscaped parks alongside the Han River provides an environmentally-friendly place
        where city folk can take a rest.</string>
    <string name="climate">Climate</string>
    <string name="climate_des">In spring, it is warm enough during the day, but it gets chilly at night.
        In summer, it is really hot and humid(25 ~ 35°C). There is a rainy season from late June
        to early July. It is hottest in the late July and early August. In autumn, it is clear and
        dry(10 ~ 25°C). The fall foliage reaches a peak in mid-October. In winter, it is too cold.
        (-10 ~ 10°C) December and January are coldest months. </string>
    <string name="currency">Currency</string>
    <string name="currency_des">Won is the Korean currency of money. One dollar (USD) is worth
        about 1,000 won.</string>
    <string name="from_incheon_to_seoul">Easy way to get from Incheon Airport to Seoul </string>
    <string name="from_incheon_to_seoul_des">The airport railroad or AREX is a very convenient way
        to get from the airport to various locations in Seoul. There are two trains that you can
        take.\n\nOne is the Express Train which goes straight to Seoul Station without any stops.
        Going on this train takes 43 minutes and is presently on sale for 8,000 won.\n\nThe other
        train goes to Seoul Station as well but makes stops at various subway transfer stations
        along the way. This training takes just over 50 minutes to go to Seoul Station and costs
        4,300 won to go to Seoul Station, or less if you get off and transfer earlier.</string>
    <string name="gyeongbokgung">Gyeongbokgung Palace</string>
    <string name="gyeongbokgung_short">Gyeongbokgung Palace is the royal palace of Joseon Dynasty
        built in 1395, which is the largest and most significant of Seoul\'s Five Grand Palaces.</string>
    <string name="gyeongbokgung_des">Gyeongbokgung Palace was the first of the five palaces built
        in the Joseon Dynasty (1395). It was destroyed by Japanese Invasion of Korea(1592) but rebuilt
        during King Kojong(1867). During the Japanese colonial period(1910-1945), much of the palace was
        destroyed by Japan and Japanese governor-general of Korea was built in the palace. The
        restoration projects have been promoted since 1989.</string>
    <string name="gyeongbokgung_address">161 Sajik-ro, Sejongno, Jongno-gu, Seoul</string>
    <string name="gyeongbokgung_transport">Gyeongbokgung Station (Subway Line 3), Exit 5</string>
    <string name="gyeongbokgung_phone">+82&#8211;2&#8211;3700&#8211;3900</string>
    <string name="gyeongbokgung_web">royalpalace.go.kr (Korean, English)</string>
    <string name="gyeongbokgung_hours">Opening hours vary depending on the season. 
        ※ Closed on Tuesdays \n※ You can see Royal Guard Changing Ceremonies at 10:00 and 14:00</string>
    <string name="gyeongbokgung_fee">Adults : 3,000 won</string>
    <string name="bukchon_hanok">Bukchon Hanok Village</string>
    <string name="bukchon_hanok_short">Bukchon Hanok Village is a good place to get a quick intro
        to old Korea. This traditional village is located between Gyeongbok Palace, Changdeok Palace.</string>
    <string name="bukchon_hanok_des">Bukchon was a high-class residential area that prime ministers,
        the royal family inhabited in Joseon Dynasty(1392–1897). The village is composed of many
        traditional houses, called Hanok and has a history of 600 years. There are museums, craft
        workshops which allows visitors to experience traditional culture.</string>
    <string name="bukchon_hanok_address">37, Gyedong-gil, Jongno-gu, Seoul</string>
    <string name="bukchon_hanok_transport">Anguk Station (Subway Line 3), Exit 1 or 2</string>
    <string name="bukchon_hanok_phone">+82&#8211;2&#8211;2148&#8211;4160</string>
    <string name="bukchon_hanok_web">hanok.seoul.go.kr </string>
    <string name="bukchon_hanok_hours">Open all year round</string>
    <string name="bukchon_hanok_fee">Free</string>
    <string name="changdeokgung">Changdeokgung Palace and Huwon</string>
    <string name="changdeokgung_short">Changdeok Palace was the second palace built in 1405
        after Gyeongbokgung. Chagdeokgung is one of the UNESCO World Heritage Sites.</string>
    <string name="changdeokgung_des">Changdeok Palace is the palace where the kings of the
        Joseon Dynasty lived for the longest time. It represents the atypical beauty of Korean palace
        architecture by arranging the buildings along the mountains. It is relatively well preserved
        in its original form and its harmonious arrangement with nature is excellent. \n\n
        You can see Changdeokgung Palace by moonlight and hear historical information from a guide
        on an evening tour. This moonlight tour is held in spring and fall and you must book the
        ticket online in advance.(ticket.interpark.com/Global)\n\n
        You can visit Huwon(Secret Garden) by making a reservation on the homepage from 10:00 6 days
        before the desired visit date. </string>
    <string name="changdeokgung_address">99, Yulgok-ro, Waryong-dong, Jongno-gu, Seoul</string>
    <string name="changdeokgung_transport">Anguk Station (Subway Line 3), Exit 3</string>
    <string name="changdeokgung_phone">+82&#8211;2&#8211;3668&#8211;2300</string>
    <string name="changdeokgung_web">eng.cdg.go.kr</string>
    <string name="changdeokgung_hours">Opening hours vary depending on the season. ※ Closed on Mondays</string>
    <string name="changdeokgung_fee">Adults : 3,000 won</string>
    <string name="n_seoul_tower">N Seoul Tower</string>
    <string name="n_seoul_tower_short">N Seoul Tower is one of the symbolic landmarks of Seoul.
        Located on the Namsan Mountain, it provides an amazing 360-degree view of Seoul.</string>
    <string name="n_seoul_tower_des">The N Seoul tower was  first established as a broadcast
        tower to send out TV and radio signals in 1969. As of now, it has become one of the
        representative landmarks and multi-cultural venues in Seoul. There is a cable car that makes
        it easy to access, but the walk up through the park gives you beautiful sights to see.
    </string>
    <string name="n_seoul_tower_address">105, Namsangongwon-gil, Yongsan-gu, Seoul</string>
    <string name="n_seoul_tower_transport">[Cable Car] Myeong-dong Station (Subway Line 4),
        Exit 3</string>
    <string name="n_seoul_tower_phone">+82&#8211;2&#8211;3455&#8211;9277</string>
    <string name="n_seoul_tower_web">seoultower.co.kr/en/</string>
    <string name="n_seoul_tower_hours">10:00~23:00</string>
    <string name="n_seoul_tower_fee">[Observatory] 10,000 won</string>
    <string name="cheonggyecheon">Cheonggyecheon Stream</string>
    <string name="cheonggyecheon_short">Cheonggyecheon Stream is popular places for those
        seeking recreation and a variety of performances.</string>
    <string name="cheonggyecheon_des">In the Cheonggyecheon, large and small events are held
        almost every week. There is also a music performance and a movie screening day. \n\n
        Cheonggyecheon Stream passes close to Deoksugung Palace, Seoul Plaza, the Sejong Center,
        Insadong Street, Changdeokgung Palace, and Changgyeonggung Palace, allowing visitors to easily
        visit major tourist sites after a leisure stroll along the stream.
        </string>
    <string name="cheonggyecheon_address">Cheonggyecheon-ro, Sangwangsimni-dong, Jongno-gu,
        Seoul</string>
    <string name="cheonggyecheon_transport">City Hall Station (Subway Line 1, 2), Exit 4.
        Walk 250 m north to Cheonggye Plaza. </string>
    <string name="cheonggyecheon_phone">+82&#8211;2&#8211;2290&#8211;7111</string>
    <string name="cheonggyecheon_web">english.visitkorea.or.kr</string>
    <string name="cheonggyecheon_hours">Open 24 hours</string>
    <string name="cheonggyecheon_fee">Free</string>
    <string name="war_memorial">The War Memorial of Korea</string>
    <string name="war_memorial_short">The War Memorial of Korea, located in Yongsan-gu, Seoul,
        exhibits and preserve materials related to the Korean War and serves as a national moral
        educational venue.</string>
    <string name="war_memorial_des">The War Memorial of Korea was established to commemorate the
        noble sacrifice of patriotic martyrs by the War Memorial Service Korea Society on June 10, 1994.
        The museum houses approximately 33,000 artifacts with about 10,000 on display at an indoor and
        outside exhibition halls.\n\nThere are six separate indoor halls, including Expeditionary Forces Room,
        Patriotic Memorial Room, War History Room, 6·25 Korean War Room, Development Hall and Large
        Machinery Room. The outdoor exhibition hall showcases large-sized weapons.</string>
    <string name="war_memorial_address">29, Itaewon-ro, Yongsan-gu, Seoul</string>
    <string name="war_memorial_transport">Samgakji Station(Subway Line 4, 6), Exit 12</string>
    <string name="war_memorial_phone">+82&#8211;2&#8211;709&#8211;3139</string>
    <string name="war_memorial_web">www.warmemo.or.kr</string>
    <string name="war_memorial_hours">09:00 ~ 18:00 ※ Closed on Mondays</string>
    <string name="war_memorial_fee">Free</string>
    <string name="lotte_world_tower">Lotte World Tower</string>
    <string name="lotte_world_tower_short">The Lotte World Tower is a supertall skyscraper
        with a 123-floor, 555 m-high. It opened to the public on April 3, 2017 and is the fifth
        tallest building in the world as of today.</string>
</resources>