<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/layout_width_zero"
                android:layout_height="@dimen/layout_height_seoul_image"
                android:layout_weight="1"
                android:contentDescription="@string/image_des"
                android:scaleType="fitXY"
                android:src="@drawable/seoul_gwanghwamun" />

            <ImageView
                android:layout_width="@dimen/layout_width_zero"
                android:layout_height="@dimen/layout_height_seoul_image"
                android:layout_weight="1"
                android:contentDescription="@string/image_des"
                android:scaleType="fitXY"
                android:src="@drawable/seoul_hyangwonjeong" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_seoul_scenery"
            android:contentDescription="@string/image_des"
            android:scaleType="fitXY"
            android:src="@drawable/seoul_scenery" />

        <TextView
            android:id="@+id/seoul_des"
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/seoul_des" />

        <TextView
            style="@style/InfoTitleTextStyle"
            android:text="@string/climate" />

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/climate_des" />

        <TextView
            style="@style/InfoTitleTextStyle"
            android:text="@string/currency" />

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/currency_des" />

        <TextView
            style="@style/InfoTitleTextStyle"
            android:text="@string/from_incheon_to_seoul" />

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/from_incheon_to_seoul_des" />

    </LinearLayout>
</ScrollView>